# avior-dedup

./: .claudeignore  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  result_launch.txt  shell.nix
.claude/: settings.local.json
Ingest_add_rating/: etmplates.json  plan.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  types.ts  vuetify-shims.d.ts
frontend/src/components/: ChipListEditor.vue  ConfigEditor.vue  JobForm.vue  ListEditor.vue  ProgressPanel.vue  ResultsPanel.vue  SearchMoveForm.vue  SearchMoveProgress.vue  SearchMoveResults.vue  TemplateEditor.vue
frontend/src/composables/: useConfig.ts  useJob.ts  useSearchMoveJob.ts
frontend/src/views/: ConfigView.vue  JobView.vue  SearchMoveConfigView.vue  SearchMoveView.vue
ingest/: etmplates.json  plan.md  searchandmove.py
scripts/: diagnose_trespass.py  generate_attr_stats.py  print_semantic_keys.py  run_cli_debug.py
src/avior_dedup/: __main__.py  cli.py  models.py  permissions.py  planner.py  progress.py  reporting.py  scanner.py  schemas.py  server.py
src/avior_dedup/.claude/: settings.local.json
src/avior_dedup/config/: __init__.py  episode_keywords.yaml  (+9 more)
test-data/dedupe/: Erkennen von Multichannel.txt  Schreibrechte problem.txt
tests/: test_permissions.py  test_scanner_duplicates.py  test_scanner_multichannel.py  test_searchmove.py  test_searchmove_mover.py  test_searchmove_routes.py  test_select_best_film.py
tmp_out/: dedup_profile.txt  dedup_profile2.txt  dedup_profile_run3.txt  dedup_timings.txt  keep.txt
(+104 files in other folders)
