[project]
name = "avior-dedup"
version = "0.1.0"
description = "Duplicate film file finder and mover for DVR recordings"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.scripts]
avior-dedup = "avior_dedup.cli:main"
avior-dedup-server = "avior_dedup.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avior_dedup"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
